--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "config": "^3.3.12",
     "express": "^4.21.2",
     "mongoose": "^8.9.2"
